# RustCon2024

./: .gitignore  README.md
esp32-slint/: Cargo.toml  README.md  build.rs
esp32-slint/.cargo/: config.toml
esp32-slint/src/: esp32.rs  instant.rs  main.rs
esp32-slint/ui/: climate.slint  heating.slint  main.slint  temperature.slint  theme.slint
speedometer/: Cargo.toml
speedometer/demo-egui/: Cargo.toml
speedometer/demo-egui/src/: frame_history.rs  main.rs  speedometer.rs
speedometer/demo-egui/src/shape/: rotate.rs
speedometer/demo-iced/: Cargo.toml
speedometer/demo-iced/src/: main.rs  speedometer.rs  theme.rs
speedometer/demo-slint/: Cargo.toml
speedometer/demo-slint/src/: main.rs
speedometer/demo-slint/ui/: main.slint  speedometer.slint  theme.slint
