[package]
name = "esp32-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", version = "1.9.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }

button-driver = { version = "0.2.1", features = ["embedded_hal"] }

display-interface = { version = "0.5.0" }
display-interface-spi = { version = "0.5" }
embedded-hal = { version = "1.0" }
embedded-hal-bus = { version = "0.2" }
embedded-graphics-core = { version = "0.4" }
esp-alloc = { version = "0.5" }
esp-backtrace = { version = "0.14", features = ["esp32", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.21", features = ["esp32"] }
esp-println = { version = "0.12", features = ["esp32", "log"] }
mipidsi = { version = "0.8.0" }
log = "0.4.22"


[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", version = "1.9.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false